WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78020
[Chromium] REGRESSION(
r101854
): Causing large amounts of unnecessary repainting.
https://bugs.webkit.org/show_bug.cgi?id=78020
Summary
[Chromium] REGRESSION(r101854): Causing large amounts of unnecessary repainting.
David Reveman
Reported
2012-02-07 12:35:23 PST
http://trac.webkit.org/changeset/101854
is causing a performance regression by forcing large amounts of repainting. See
http://code.google.com/p/chromium/issues/detail?id=112009
for more details.
Attachments
Patch
(7.36 KB, patch)
2012-02-07 12:46 PST
,
David Reveman
no flags
Details
Formatted Diff
Diff
Patch
(7.53 KB, patch)
2012-02-07 13:32 PST
,
David Reveman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Reveman
Comment 1
2012-02-07 12:46:55 PST
Created
attachment 125902
[details]
Patch
Vangelis Kokkevis
Comment 2
2012-02-07 12:53:42 PST
Comment on
attachment 125902
[details]
Patch Looks good. Thanks!
James Robinson
Comment 3
2012-02-07 13:03:32 PST
Comment on
attachment 125902
[details]
Patch Looks good to me too, set r? cq? if you're ready to land this.
David Reveman
Comment 4
2012-02-07 13:32:10 PST
Created
attachment 125915
[details]
Patch
David Reveman
Comment 5
2012-02-07 13:34:20 PST
(In reply to
comment #3
)
> (From update of
attachment 125902
[details]
) > Looks good to me too, set r? cq? if you're ready to land this.
New patch is ready to land. The updated patch just adds another check to the unit test to make sure we don't regress again.
David Reveman
Comment 6
2012-02-07 15:03:24 PST
***
Bug 77375
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 7
2012-02-07 17:03:23 PST
Comment on
attachment 125915
[details]
Patch Clearing flags on attachment: 125915 Committed
r107014
: <
http://trac.webkit.org/changeset/107014
>
WebKit Review Bot
Comment 8
2012-02-07 17:03:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug