[Chromium] REGRESSION(r101854): Causing large amounts of unnecessary repainting. https://bugs.webkit.org/show_bug.cgi?id=78020

Patch by David Reveman <reveman@chromium.org> on 2012-02-07
Reviewed by James Robinson.

Source/WebCore:

Revert r101854.

This patch is tested by the following unit test:
- TextureManagerTest.requestTextureExceedingPreferredLimit

* platform/graphics/chromium/ManagedTexture.cpp:
(WebCore::ManagedTexture::reserve):
* platform/graphics/chromium/TextureManager.cpp:
(WebCore::TextureManager::requestTexture):
* platform/graphics/chromium/TextureManager.h:
(TextureManager):

Source/WebKit/chromium:

Update TextureManagerTest.requestTextureExceedingPreferredLimit test.

* tests/TextureManagerTest.cpp:
(WTF::TextureManagerTest::requestTexture):
(WTF::TEST_F):

Canonical link: https://commits.webkit.org/94927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107014 268f45cc-cd09-0410-ab3c-d52691b4dbfc